--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "start": "node --env-file=../.env ./dist/index.js",
-    "dev": "node -r ts-node/register --env-file=../.env index.ts"
+    "start": "pnpm run build && node ./dist/index.js",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register index.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
   }
 }
