--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "start": "pnpm run build && node ./dist/index.js",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register index.ts"
+    "start": "node ./dist/index.js",
+    "dev": "pnpm run build && pnpm run start"
   },
   "keywords": [],
   "author": "",
