--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts",
-    "build": "rimraf dist && tsc",
-    "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js" 
   },
   "pre-commit" : [
     "ts.check",
@@ -31,13 +28,14 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "typescript": "^4.0.0", 
+    "@types/node": "^14.0.0",
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.7",
     "pre-commit": "^1.2.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.2"
+    "tsconfig-paths": "^4.2.0"
   }
 }
