--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "outDir": "./dist", // Output folder for compiled JavaScript
-    "module": "commonjs",
-    "target": "es6",
-    "esModuleInterop": true,
-    "strict": true
+      "module": "commonjs",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "target": "es6",
+      "noImplicitAny": true,
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "outDir": "dist",
+      "baseUrl": ".",
+      "paths": {
+          "*": ["node_modules/*", "/types/*"]
+      }
   },
-  "include": ["./**/*.ts"], // Include all .ts files
-  "exclude": ["node_modules", "dist"]
-}
+  "include": ["./**/*"]
+  }
