--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
-  "compilerOptions": {
+    "compilerOptions": {
+      "outDir": "./dist",
       "module": "commonjs",
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
       "target": "es6",
-      "noImplicitAny": true,
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "outDir": "dist",
-      "baseUrl": ".",
-      "paths": {
-          "*": ["node_modules/*", "/types/*"]
-      }
-  },
-  "include": ["./**/*"]
+      "esModuleInterop": true,
+      "strict": true
+    },
+    "include": ["./**/*.ts"],
+    "exclude": ["node_modules", "dist"]
   }
+  
